@@ -1,5 +1,6 @@
 Unreleased
 
+* Improve formatting for `NameResolutionError` (Timo Brembeck, #192)
 * Fix internal redirect checker (Timo Ludwig, #180)
 * Fix SSL status of unreachable domains (Timo Ludwig, #184)
 * Fix URL message for internal server errorrs (Timo Ludwig, #182)
